Fixed email error message visibility

--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -606,6 +606,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
   
 }
 
@@ -616,6 +617,7 @@
     flex-direction: column;
     width: 100%;
     margin-top: 144px;
+    margin-bottom: 90px;
 
     @media (min-width: 994px){
         margin-top: 200px;   
